--- a/hdecay.in
+++ b/hdecay.in
@@ -147,12 +147,12 @@ m1       = 125.518D0
 m3       = 500.705D0
 vs       = 510.922D0
 *** complex singlet dark matter phase ***
-alph1    = 0.2D0
-m1       = 125.D0
-m2       = 400.D0
-m3       = 40.D0
-vs       = 100.D0
-a1       = 0.D0
+alph1    = -0.14331719167196D0
+m1       = 125.09D0
+m2       = 345.0021536863908D0
+m3       = 61.02910887468706D0
+vs       = 467.196443135993D0
+a1       = 0.0D0
 ******************** EW Corrections ********************
 ** Attention: This can only be used for the Dark Matter Phase of the CxSM with a1 = 0 **
 ielwcxsm = 1
@@ -161,5 +161,5 @@ vsscheme = 1
 pdprocess= 1
 ralph_mix= 1
 **** IR parameter - DeltaE is the detector resolution; do not change LambdaIR
-DeltaE   = 1.D0
-LambdaIR = 1.D0
+DeltaE   = 10.0D0
+LambdaIR = 1.0D0
