--- a/hdecay.in
+++ b/hdecay.in
@@ -147,19 +147,20 @@ m1       = 125.518D0
 m3       = 500.705D0
 vs       = 510.922D0
 *** complex singlet dark matter phase ***
-alph1    = -0.14331719167196D0
+alph1    = 0.2D0
 m1       = 125.09D0
-m2       = 345.0021536863908D0
-m3       = 61.02910887468706D0
-vs       = 467.196443135993D0
+m2       = 270.D0
+m3       = 60.D0
+vs       = 50.D0
 a1       = 0.0D0
 ******************** EW Corrections ********************
 ** Attention: This can only be used for the Dark Matter Phase of the CxSM with a1 = 0 **
 ielwcxsm = 1
 **** ren. scheme: vsscheme = 1 pd, = 2 ZEM, pdprocess = 1 h1->AA, =2 h2->AA, alpha_mix =1 OS, =2 pstar
-vsscheme = 1
-pdprocess= 1
-ralph_mix= 1
-**** IR parameter - DeltaE is the detector resolution; do not change LambdaIR
+vsscheme = 2
+pdprocess= 2
+ralph_mix= 2
+**** IR parameter - DeltaE is the detector resolution;
 DeltaE   = 10.0D0
-LambdaIR = 1.0D0
+**** NNLO approx: NNLOapprox=1, add NLO^2 term to h2h1h1 decay width
+NNLOapp  = 1
