--- a/tests/phase4.in
+++ b/tests/phase4.in
@@ -154,15 +154,22 @@ m3       = 731.205D0
 vs       = 522.181D0
 a1       = -3.12115D07
 ******************** EW Corrections ********************
-** Attention: This can only be used for the Dark Matter Phase of the CxSM with a1 = 0 **
-**** ielwcxsm = 0, LO, =1 include NLO corrections
-ielwcxsm = 1
+** Attention: This can only be used the complex dark matter phase (icxSM=4) of the CxSM with a1=0 **
+**** ielwcxsm = 0 LO, = 1 include NLO corrections
+ielwcxsm = 0
 **** ren. scheme: vsscheme = 1 pd, = 2 ZEM, pdprocess = 1 h1->AA, =2 h2->AA, alpha_mix =1 OS, =2 pstar
-vsscheme = 2
+vsscheme = 1
 pdprocess= 1
-ralph_mix= 1
+ralph_mix= 2
 **** IR parameter - DeltaE is the detector resolution (in GeV);
 DeltaE   = 10.0D0
-**** NNLO approx: NNLOapprox=1, add NLO^2 term to h2h1h1 decay width if |(vs/v)/Tan(alpha)-1|<deltaNNLO
-NNLOapp  = 1
+**** NNLO approx: NNLOapprox=1, add NLO^2 term to h2h1h1 decay width if |tan(alpha)*(v/vs)-1|<=deltaNNLO
+NNLOapp  = 0
 deltaNNLO= 0.05D0
+**** Parameter conversion, change input parameters vS and alpha accordingly, if given scheme above is not the specified input scheme
+**** Paramcon = 0 no parameter conversion, =1 do parameter conversion
+**** Standard scheme: stdvs = 1 pd, = 2 ZEM, stdproc = 1 h1->AA, =2 h2->AA, stdalpha =1 OS, =2 pstar
+Paramcon = 0
+stdvs    = 1
+stdproc  = 2
+stdalpha = 1
