--- a/tests/phase4.in
+++ b/tests/phase4.in
@@ -147,12 +147,12 @@ m1       = 125.518D0
 m3       = 500.705D0
 vs       = 510.922D0
 *** complex singlet dark matter phase ***
-alph1    = -0.317120D0
-m1       = 125.3D0
-m2       = 400.D0
-m3       = 731.205D0
-vs       = 522.181D0
-a1       = -3.12115D07
+alph1    = 0.2D0
+m1       = 125.09D0
+m2       = 270.D0
+m3       = 60.D0
+vs       = 300.D0
+a1       = 0.0D0
 ******************** EW Corrections ********************
 ** Attention: This can only be used the complex dark matter phase (icxSM=4) of the CxSM with a1=0 **
 **** ielwcxsm = 0 LO, = 1 include NLO corrections
